Add dimension choice button and clearGrid function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <button class="btn dimension">Choose The Dimension</button>
     <div class="container"></div>
   </body>
 </html>
